--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Chang",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource": "^0.7.2",
     "apollo-server": "^2.18.2",
     "nodemon": "^2.0.5"
   }
