--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-datasource": "^0.7.2",
     "apollo-server": "^2.18.2",
+    "lodash": "^4.17.20",
     "nodemon": "^2.0.5"
   }
 }
