--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-datasource": "^0.7.2",
+    "apollo-datasource-rest": "^0.9.4",
     "apollo-server": "^2.18.2",
     "lodash": "^4.17.20",
     "nodemon": "^2.0.5"
